--- a/src/WhoamiNet/WhoamiNet.csproj
+++ b/src/WhoamiNet/WhoamiNet.csproj
@@ -1,11 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\WhoamiCore-3.0.0</DockerfileContext>
-  </PropertyGroup>
+	<PropertyGroup>
+		<!--netcoreapp2.1;netcoreapp2.2;-->
+		<TargetFrameworks>netcoreapp3.0;netcoreapp3.1;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>disable</ImplicitUsings>
+		<LangVersion>11.0</LangVersion>
+		<AssemblyName>WebApplication</AssemblyName>
+		<!--<PublishAot>true</PublishAot>-->
+		<InvariantGlobalization>true</InvariantGlobalization>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<!--<PackageReference Include="Microsoft.AspNetCore.App" />-->
+		<!--<FrameworkReference Include="Microsoft.AspNetCore.App" />-->
+	</ItemGroup>
 
 </Project>
